# awsconnect

./: .gitignore  Cargo.toml  Makefile  README.md  deny.toml
.github/workflows/: release.yml
src/: main.rs
