[package]
name = "awsconnect"
version = "0.1.0"
edition = "2024"
license = "MIT"

[dependencies]
keyring = "3.6"
totp-rs = "5.7"
tokio = { version = "1.0", features = ["full"] }
clap = { version = "4.5", features = ["derive"] }
anyhow = "1.0"

# Platform-specific keyring features
[target.'cfg(target_os = "macos")'.dependencies]
keyring = { version = "3.6", features = ["apple-native"] }

[target.'cfg(target_os = "linux")'.dependencies]
keyring = { version = "3.6", features = ["linux-native"] }

[target.'cfg(target_os = "windows")'.dependencies]
keyring = { version = "3.6", features = ["windows-native"] }
